--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
         <nav role="navigation">
             <a href="index.html">Início</a>
-            <a href="elementos.html">Elementos Químicos</a>
+            <a href="tabela.html">Elementos Químicos</a>
             <a href="fale conosco.html">Fale Conosco</a>
         </nav>        
         <div class="search-container">
